// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic base. 1`] = `
<div
  class="rmc-tabs rmc-tabs-horizontal rmc-tabs-top"
>
  <div
    class="rmc-tabs-tab-bar-wrap"
  >
    <div
      class="rmc-tabs-tab-bar rmc-tabs-tab-bar-animated rmc-tabs-tab-bar-top"
      style="background-color:#fff;"
    >
      <div
        class="rmc-tabs-tab-bar-content"
        role="tablist"
        style="touch-action:pan-y;"
      >
        <div
          aria-selected="true"
          class="rmc-tabs-tab-bar-tab rmc-tabs-tab-bar-tab-active"
          id="m-tabs-0-0"
          role="tab"
          style="width:20%;"
        >
          t1
        </div>
        <div
          aria-selected="false"
          class="rmc-tabs-tab-bar-tab"
          id="m-tabs-0-1"
          role="tab"
          style="width:20%;"
        >
          t2
        </div>
        <div
          aria-selected="false"
          class="rmc-tabs-tab-bar-tab"
          id="m-tabs-0-2"
          role="tab"
          style="width:20%;"
        >
          t3
        </div>
        <div
          aria-selected="false"
          class="rmc-tabs-tab-bar-tab"
          id="m-tabs-0-3"
          role="tab"
          style="width:20%;"
        >
          t4
        </div>
        <div
          aria-selected="false"
          class="rmc-tabs-tab-bar-tab"
          id="m-tabs-0-4"
          role="tab"
          style="width:20%;"
        >
          t5
        </div>
        <div
          class="rmc-tabs-tab-bar-underline"
          style="width:20%;left:0%;"
        />
      </div>
    </div>
  </div>
  <div
    class="rmc-tabs-content-wrap rmc-tabs-content-wrap-animated"
    style="touch-action:pan-x pan-y;transform:translate3d(0%, 0px, 1px);-webkit-transform:translate3d(0%, 0px, 1px);-moz-transform:translate3d(0%, 0px, 1px);"
  >
    <div
      aria-hidden="false"
      aria-labelledby="m-tabs-0-0"
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-active"
      role="tabpanel"
    >
      <div
        style="background:#ADFFD7;"
      >
        <p
          style="margin:0;padding:10px;"
        >
          tab 1 1
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 1 2
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 1 3
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 1 4
        </p>
      </div>
    </div>
    <div
      aria-hidden="true"
      aria-labelledby="m-tabs-0-1"
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
      role="tabpanel"
    >
      <div
        style="background:#ADFFD7;"
      >
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 1
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 2
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 3
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 4
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 5
        </p>
      </div>
    </div>
    <div
      aria-hidden="true"
      aria-labelledby="m-tabs-0-2"
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="true"
      aria-labelledby="m-tabs-0-3"
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="true"
      aria-labelledby="m-tabs-0-4"
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
      role="tabpanel"
    />
  </div>
</div>
`;

exports[`basic destroyInactiveTab. 1`] = `
<div
  class="rmc-tabs rmc-tabs-horizontal rmc-tabs-top"
>
  <div
    class="rmc-tabs-tab-bar-wrap"
  >
    <div
      class="rmc-tabs-tab-bar rmc-tabs-tab-bar-animated rmc-tabs-tab-bar-top"
      style="background-color:#fff;"
    >
      <div
        class="rmc-tabs-tab-bar-content"
        role="tablist"
        style="touch-action:pan-y;"
      >
        <div
          aria-selected="false"
          class="rmc-tabs-tab-bar-tab"
          id="m-tabs-5-0"
          role="tab"
          style="width:20%;"
        >
          t1
        </div>
        <div
          aria-selected="false"
          class="rmc-tabs-tab-bar-tab"
          id="m-tabs-5-1"
          role="tab"
          style="width:20%;"
        >
          t2
        </div>
        <div
          aria-selected="true"
          class="rmc-tabs-tab-bar-tab rmc-tabs-tab-bar-tab-active"
          id="m-tabs-5-2"
          role="tab"
          style="width:20%;"
        >
          t3
        </div>
        <div
          aria-selected="false"
          class="rmc-tabs-tab-bar-tab"
          id="m-tabs-5-3"
          role="tab"
          style="width:20%;"
        >
          t4
        </div>
        <div
          aria-selected="false"
          class="rmc-tabs-tab-bar-tab"
          id="m-tabs-5-4"
          role="tab"
          style="width:20%;"
        >
          t5
        </div>
        <div
          class="rmc-tabs-tab-bar-underline"
          style="width:20%;left:40%;"
        />
      </div>
    </div>
  </div>
  <div
    class="rmc-tabs-content-wrap rmc-tabs-content-wrap-animated"
    style="touch-action:pan-x pan-y;transform:translate3d(-200%, 0px, 1px);-webkit-transform:translate3d(-200%, 0px, 1px);-moz-transform:translate3d(-200%, 0px, 1px);"
  >
    <div
      aria-hidden="true"
      aria-labelledby="m-tabs-5-0"
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="true"
      aria-labelledby="m-tabs-5-1"
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="false"
      aria-labelledby="m-tabs-5-2"
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-active"
      role="tabpanel"
    >
      <div
        style="background:#ADFFD7;"
      >
        tab 3
      </div>
    </div>
    <div
      aria-hidden="true"
      aria-labelledby="m-tabs-5-3"
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="true"
      aria-labelledby="m-tabs-5-4"
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
      role="tabpanel"
    />
  </div>
</div>
`;

exports[`basic inital tab. 1`] = `
<div
  class="rmc-tabs rmc-tabs-horizontal rmc-tabs-top"
>
  <div
    class="rmc-tabs-tab-bar-wrap"
  >
    <div
      class="rmc-tabs-tab-bar rmc-tabs-tab-bar-animated rmc-tabs-tab-bar-top"
      style="background-color:#fff;"
    >
      <div
        class="rmc-tabs-tab-bar-content"
        role="tablist"
        style="touch-action:pan-y;"
      >
        <div
          aria-selected="false"
          class="rmc-tabs-tab-bar-tab"
          id="m-tabs-2-0"
          role="tab"
          style="width:20%;"
        >
          t1
        </div>
        <div
          aria-selected="true"
          class="rmc-tabs-tab-bar-tab rmc-tabs-tab-bar-tab-active"
          id="m-tabs-2-1"
          role="tab"
          style="width:20%;"
        >
          t2
        </div>
        <div
          aria-selected="false"
          class="rmc-tabs-tab-bar-tab"
          id="m-tabs-2-2"
          role="tab"
          style="width:20%;"
        >
          t3
        </div>
        <div
          aria-selected="false"
          class="rmc-tabs-tab-bar-tab"
          id="m-tabs-2-3"
          role="tab"
          style="width:20%;"
        >
          t4
        </div>
        <div
          aria-selected="false"
          class="rmc-tabs-tab-bar-tab"
          id="m-tabs-2-4"
          role="tab"
          style="width:20%;"
        >
          t5
        </div>
        <div
          class="rmc-tabs-tab-bar-underline"
          style="width:20%;left:20%;"
        />
      </div>
    </div>
  </div>
  <div
    class="rmc-tabs-content-wrap rmc-tabs-content-wrap-animated"
    style="touch-action:pan-x pan-y;transform:translate3d(-100%, 0px, 1px);-webkit-transform:translate3d(-100%, 0px, 1px);-moz-transform:translate3d(-100%, 0px, 1px);"
  >
    <div
      aria-hidden="true"
      aria-labelledby="m-tabs-2-0"
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
      role="tabpanel"
    >
      <div
        style="background:#ADFFD7;"
      >
        <p
          style="margin:0;padding:10px;"
        >
          tab 1 1
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 1 2
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 1 3
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 1 4
        </p>
      </div>
    </div>
    <div
      aria-hidden="false"
      aria-labelledby="m-tabs-2-1"
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-active"
      role="tabpanel"
    >
      <div
        style="background:#ADFFD7;"
      >
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 1
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 2
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 3
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 4
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 5
        </p>
      </div>
    </div>
    <div
      aria-hidden="true"
      aria-labelledby="m-tabs-2-2"
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
      role="tabpanel"
    >
      <div
        style="background:#ADFFD7;"
      >
        tab 3
      </div>
    </div>
    <div
      aria-hidden="true"
      aria-labelledby="m-tabs-2-3"
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="true"
      aria-labelledby="m-tabs-2-4"
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
      role="tabpanel"
    />
  </div>
</div>
`;

exports[`basic no animation. 1`] = `
<div
  class="rmc-tabs rmc-tabs-horizontal rmc-tabs-top"
>
  <div
    class="rmc-tabs-tab-bar-wrap"
  >
    <div
      class="rmc-tabs-tab-bar rmc-tabs-tab-bar-top"
      style="background-color:#fff;"
    >
      <div
        class="rmc-tabs-tab-bar-content"
        role="tablist"
        style="touch-action:pan-y;"
      >
        <div
          aria-selected="true"
          class="rmc-tabs-tab-bar-tab rmc-tabs-tab-bar-tab-active"
          id="m-tabs-1-0"
          role="tab"
          style="width:20%;"
        >
          t1
        </div>
        <div
          aria-selected="false"
          class="rmc-tabs-tab-bar-tab"
          id="m-tabs-1-1"
          role="tab"
          style="width:20%;"
        >
          t2
        </div>
        <div
          aria-selected="false"
          class="rmc-tabs-tab-bar-tab"
          id="m-tabs-1-2"
          role="tab"
          style="width:20%;"
        >
          t3
        </div>
        <div
          aria-selected="false"
          class="rmc-tabs-tab-bar-tab"
          id="m-tabs-1-3"
          role="tab"
          style="width:20%;"
        >
          t4
        </div>
        <div
          aria-selected="false"
          class="rmc-tabs-tab-bar-tab"
          id="m-tabs-1-4"
          role="tab"
          style="width:20%;"
        >
          t5
        </div>
        <div
          class="rmc-tabs-tab-bar-underline"
          style="width:20%;left:0%;"
        />
      </div>
    </div>
  </div>
  <div
    class="rmc-tabs-content-wrap"
    style="touch-action:pan-x pan-y;position:relative;left:0%;"
  >
    <div
      aria-hidden="false"
      aria-labelledby="m-tabs-1-0"
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-active"
      role="tabpanel"
    >
      <div
        style="background:#ADFFD7;"
      >
        <p
          style="margin:0;padding:10px;"
        >
          tab 1 1
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 1 2
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 1 3
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 1 4
        </p>
      </div>
    </div>
    <div
      aria-hidden="true"
      aria-labelledby="m-tabs-1-1"
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
      role="tabpanel"
    >
      <div
        style="background:#ADFFD7;"
      >
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 1
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 2
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 3
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 4
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 5
        </p>
      </div>
    </div>
    <div
      aria-hidden="true"
      aria-labelledby="m-tabs-1-2"
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="true"
      aria-labelledby="m-tabs-1-3"
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="true"
      aria-labelledby="m-tabs-1-4"
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
      role="tabpanel"
    />
  </div>
</div>
`;

exports[`basic prerenderingSiblingsNumber. 1`] = `
<div
  class="rmc-tabs rmc-tabs-horizontal rmc-tabs-top"
>
  <div
    class="rmc-tabs-tab-bar-wrap"
  >
    <div
      class="rmc-tabs-tab-bar rmc-tabs-tab-bar-animated rmc-tabs-tab-bar-top"
      style="background-color:#fff;"
    >
      <div
        class="rmc-tabs-tab-bar-content"
        role="tablist"
        style="touch-action:pan-y;"
      >
        <div
          aria-selected="true"
          class="rmc-tabs-tab-bar-tab rmc-tabs-tab-bar-tab-active"
          id="m-tabs-4-0"
          role="tab"
          style="width:20%;"
        >
          t1
        </div>
        <div
          aria-selected="false"
          class="rmc-tabs-tab-bar-tab"
          id="m-tabs-4-1"
          role="tab"
          style="width:20%;"
        >
          t2
        </div>
        <div
          aria-selected="false"
          class="rmc-tabs-tab-bar-tab"
          id="m-tabs-4-2"
          role="tab"
          style="width:20%;"
        >
          t3
        </div>
        <div
          aria-selected="false"
          class="rmc-tabs-tab-bar-tab"
          id="m-tabs-4-3"
          role="tab"
          style="width:20%;"
        >
          t4
        </div>
        <div
          aria-selected="false"
          class="rmc-tabs-tab-bar-tab"
          id="m-tabs-4-4"
          role="tab"
          style="width:20%;"
        >
          t5
        </div>
        <div
          class="rmc-tabs-tab-bar-underline"
          style="width:20%;left:0%;"
        />
      </div>
    </div>
  </div>
  <div
    class="rmc-tabs-content-wrap rmc-tabs-content-wrap-animated"
    style="touch-action:pan-x pan-y;transform:translate3d(0%, 0px, 1px);-webkit-transform:translate3d(0%, 0px, 1px);-moz-transform:translate3d(0%, 0px, 1px);"
  >
    <div
      aria-hidden="false"
      aria-labelledby="m-tabs-4-0"
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-active"
      role="tabpanel"
    >
      <div
        style="background:#ADFFD7;"
      >
        <p
          style="margin:0;padding:10px;"
        >
          tab 1 1
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 1 2
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 1 3
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 1 4
        </p>
      </div>
    </div>
    <div
      aria-hidden="true"
      aria-labelledby="m-tabs-4-1"
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
      role="tabpanel"
    >
      <div
        style="background:#ADFFD7;"
      >
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 1
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 2
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 3
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 4
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 5
        </p>
      </div>
    </div>
    <div
      aria-hidden="true"
      aria-labelledby="m-tabs-4-2"
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="true"
      aria-labelledby="m-tabs-4-3"
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="true"
      aria-labelledby="m-tabs-4-4"
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
      role="tabpanel"
    />
  </div>
</div>
`;

exports[`basic renderTabBar renderTab. 1`] = `
<div
  class="rmc-tabs rmc-tabs-horizontal rmc-tabs-top"
>
  <div
    class="rmc-tabs-tab-bar-wrap"
  >
    <div
      class="rmc-tabs-tab-bar rmc-tabs-tab-bar-animated rmc-tabs-tab-bar-top"
      style="background-color:#fff;"
    >
      <div
        class="rmc-tabs-tab-bar-content"
        role="tablist"
        style="touch-action:pan-y;"
      >
        <div
          aria-selected="true"
          class="rmc-tabs-tab-bar-tab rmc-tabs-tab-bar-tab-active"
          id="m-tabs-7-0"
          role="tab"
          style="width:20%;"
        >
          <div>
            t1
          </div>
        </div>
        <div
          aria-selected="false"
          class="rmc-tabs-tab-bar-tab"
          id="m-tabs-7-1"
          role="tab"
          style="width:20%;"
        >
          <div
            style="position:relative;"
          >
            t2
            <div
              style="position:absolute;right:-3px;top:-1px;width:6px;height:6px;background:red;border-top-left-radius:6px;border-bottom-left-radius:6px;border-bottom-right-radius:6px;border-top-right-radius:6px;"
            />
          </div>
        </div>
        <div
          aria-selected="false"
          class="rmc-tabs-tab-bar-tab"
          id="m-tabs-7-2"
          role="tab"
          style="width:20%;"
        >
          <div>
            t3
          </div>
        </div>
        <div
          aria-selected="false"
          class="rmc-tabs-tab-bar-tab"
          id="m-tabs-7-3"
          role="tab"
          style="width:20%;"
        >
          <div>
            t4
          </div>
        </div>
        <div
          aria-selected="false"
          class="rmc-tabs-tab-bar-tab"
          id="m-tabs-7-4"
          role="tab"
          style="width:20%;"
        >
          <div>
            t5
          </div>
        </div>
        <div
          class="rmc-tabs-tab-bar-underline"
          style="width:20%;left:0%;"
        />
      </div>
    </div>
  </div>
  <div
    class="rmc-tabs-content-wrap rmc-tabs-content-wrap-animated"
    style="touch-action:pan-x pan-y;transform:translate3d(0%, 0px, 1px);-webkit-transform:translate3d(0%, 0px, 1px);-moz-transform:translate3d(0%, 0px, 1px);"
  >
    <div
      aria-hidden="false"
      aria-labelledby="m-tabs-7-0"
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-active"
      role="tabpanel"
    >
      <div
        style="background:#ADFFD7;"
      >
        <p
          style="margin:0;padding:10px;"
        >
          tab 1 1
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 1 2
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 1 3
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 1 4
        </p>
      </div>
    </div>
    <div
      aria-hidden="true"
      aria-labelledby="m-tabs-7-1"
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
      role="tabpanel"
    >
      <div
        style="background:#ADFFD7;"
      >
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 1
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 2
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 3
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 4
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 5
        </p>
      </div>
    </div>
    <div
      aria-hidden="true"
      aria-labelledby="m-tabs-7-2"
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="true"
      aria-labelledby="m-tabs-7-3"
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="true"
      aria-labelledby="m-tabs-7-4"
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
      role="tabpanel"
    />
  </div>
</div>
`;

exports[`basic tabBarPosition. 1`] = `
<div
  class="rmc-tabs rmc-tabs-horizontal rmc-tabs-bottom"
>
  <div
    class="rmc-tabs-content-wrap rmc-tabs-content-wrap-animated"
    style="touch-action:pan-x pan-y;transform:translate3d(0%, 0px, 1px);-webkit-transform:translate3d(0%, 0px, 1px);-moz-transform:translate3d(0%, 0px, 1px);"
  >
    <div
      aria-hidden="false"
      aria-labelledby="m-tabs-3-0"
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-active"
      role="tabpanel"
    >
      <div
        style="background:#ADFFD7;"
      >
        <p
          style="margin:0;padding:10px;"
        >
          tab 1 1
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 1 2
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 1 3
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 1 4
        </p>
      </div>
    </div>
    <div
      aria-hidden="true"
      aria-labelledby="m-tabs-3-1"
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
      role="tabpanel"
    >
      <div
        style="background:#ADFFD7;"
      >
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 1
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 2
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 3
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 4
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 5
        </p>
      </div>
    </div>
    <div
      aria-hidden="true"
      aria-labelledby="m-tabs-3-2"
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="true"
      aria-labelledby="m-tabs-3-3"
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="true"
      aria-labelledby="m-tabs-3-4"
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
      role="tabpanel"
    />
  </div>
  <div
    class="rmc-tabs-tab-bar-wrap"
  >
    <div
      class="rmc-tabs-tab-bar rmc-tabs-tab-bar-animated rmc-tabs-tab-bar-bottom"
      style="background-color:#fff;"
    >
      <div
        class="rmc-tabs-tab-bar-content"
        role="tablist"
        style="touch-action:pan-y;"
      >
        <div
          aria-selected="true"
          class="rmc-tabs-tab-bar-tab rmc-tabs-tab-bar-tab-active"
          id="m-tabs-3-0"
          role="tab"
          style="width:20%;"
        >
          t1
        </div>
        <div
          aria-selected="false"
          class="rmc-tabs-tab-bar-tab"
          id="m-tabs-3-1"
          role="tab"
          style="width:20%;"
        >
          t2
        </div>
        <div
          aria-selected="false"
          class="rmc-tabs-tab-bar-tab"
          id="m-tabs-3-2"
          role="tab"
          style="width:20%;"
        >
          t3
        </div>
        <div
          aria-selected="false"
          class="rmc-tabs-tab-bar-tab"
          id="m-tabs-3-3"
          role="tab"
          style="width:20%;"
        >
          t4
        </div>
        <div
          aria-selected="false"
          class="rmc-tabs-tab-bar-tab"
          id="m-tabs-3-4"
          role="tab"
          style="width:20%;"
        >
          t5
        </div>
        <div
          class="rmc-tabs-tab-bar-underline"
          style="width:20%;left:0%;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`basic vertical. 1`] = `
<div
  class="rmc-tabs rmc-tabs-vertical rmc-tabs-left"
>
  <div
    class="rmc-tabs-tab-bar-wrap"
  >
    <div
      class="rmc-tabs-tab-bar rmc-tabs-tab-bar-animated rmc-tabs-tab-bar-left"
      style="background-color:#fff;"
    >
      <div
        class="rmc-tabs-tab-bar-content"
        role="tablist"
        style="touch-action:pan-x;"
      >
        <div
          aria-selected="true"
          class="rmc-tabs-tab-bar-tab rmc-tabs-tab-bar-tab-active"
          id="m-tabs-6-0"
          role="tab"
          style="height:20%;"
        >
          t1
        </div>
        <div
          aria-selected="false"
          class="rmc-tabs-tab-bar-tab"
          id="m-tabs-6-1"
          role="tab"
          style="height:20%;"
        >
          t2
        </div>
        <div
          aria-selected="false"
          class="rmc-tabs-tab-bar-tab"
          id="m-tabs-6-2"
          role="tab"
          style="height:20%;"
        >
          t3
        </div>
        <div
          aria-selected="false"
          class="rmc-tabs-tab-bar-tab"
          id="m-tabs-6-3"
          role="tab"
          style="height:20%;"
        >
          t4
        </div>
        <div
          aria-selected="false"
          class="rmc-tabs-tab-bar-tab"
          id="m-tabs-6-4"
          role="tab"
          style="height:20%;"
        >
          t5
        </div>
        <div
          class="rmc-tabs-tab-bar-underline"
          style="height:20%;top:0%;"
        />
      </div>
    </div>
  </div>
  <div
    class="rmc-tabs-content-wrap rmc-tabs-content-wrap-animated"
    style="touch-action:pan-x pan-y;transform:translate3d(0px, 0%, 1px);-webkit-transform:translate3d(0px, 0%, 1px);-moz-transform:translate3d(0px, 0%, 1px);"
  >
    <div
      aria-hidden="false"
      aria-labelledby="m-tabs-6-0"
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-active"
      role="tabpanel"
    >
      <div
        style="background:#ADFFD7;"
      >
        <p
          style="margin:0;padding:10px;"
        >
          tab 1 1
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 1 2
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 1 3
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 1 4
        </p>
      </div>
    </div>
    <div
      aria-hidden="true"
      aria-labelledby="m-tabs-6-1"
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
      role="tabpanel"
    >
      <div
        style="background:#ADFFD7;"
      >
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 1
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 2
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 3
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 4
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 5
        </p>
      </div>
    </div>
    <div
      aria-hidden="true"
      aria-labelledby="m-tabs-6-2"
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="true"
      aria-labelledby="m-tabs-6-3"
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="true"
      aria-labelledby="m-tabs-6-4"
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
      role="tabpanel"
    />
  </div>
</div>
`;

exports[`single content. base 1`] = `
<div
  class="rmc-tabs rmc-tabs-horizontal rmc-tabs-top"
>
  <div
    class="rmc-tabs-tab-bar-wrap"
  >
    <div
      class="rmc-tabs-tab-bar rmc-tabs-tab-bar-animated rmc-tabs-tab-bar-top"
      style="background-color:#fff;"
    >
      <div
        class="rmc-tabs-tab-bar-content"
        role="tablist"
        style="touch-action:pan-y;"
      >
        <div
          aria-selected="true"
          class="rmc-tabs-tab-bar-tab rmc-tabs-tab-bar-tab-active"
          id="m-tabs-9-0"
          role="tab"
          style="width:20%;"
        >
          t1
        </div>
        <div
          aria-selected="false"
          class="rmc-tabs-tab-bar-tab"
          id="m-tabs-9-1"
          role="tab"
          style="width:20%;"
        >
          t2
        </div>
        <div
          aria-selected="false"
          class="rmc-tabs-tab-bar-tab"
          id="m-tabs-9-2"
          role="tab"
          style="width:20%;"
        >
          t3
        </div>
        <div
          aria-selected="false"
          class="rmc-tabs-tab-bar-tab"
          id="m-tabs-9-3"
          role="tab"
          style="width:20%;"
        >
          t4
        </div>
        <div
          aria-selected="false"
          class="rmc-tabs-tab-bar-tab"
          id="m-tabs-9-4"
          role="tab"
          style="width:20%;"
        >
          t5
        </div>
        <div
          class="rmc-tabs-tab-bar-underline"
          style="width:20%;left:0%;"
        />
      </div>
    </div>
  </div>
  <div
    class="rmc-tabs-content-wrap rmc-tabs-content-wrap-animated"
    style="touch-action:pan-x pan-y;transform:translate3d(0%, 0px, 1px);-webkit-transform:translate3d(0%, 0px, 1px);-moz-transform:translate3d(0%, 0px, 1px);"
  >
    <div
      aria-hidden="false"
      aria-labelledby="m-tabs-9-0"
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-active"
      role="tabpanel"
    >
      <div>
        <p>
          single content
        </p>
      </div>
    </div>
    <div
      aria-hidden="true"
      aria-labelledby="m-tabs-9-1"
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
      role="tabpanel"
    >
      <div>
        <p>
          single content
        </p>
      </div>
    </div>
    <div
      aria-hidden="true"
      aria-labelledby="m-tabs-9-2"
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="true"
      aria-labelledby="m-tabs-9-3"
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="true"
      aria-labelledby="m-tabs-9-4"
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
      role="tabpanel"
    />
  </div>
</div>
`;

exports[`single content. function 1`] = `
<div
  class="rmc-tabs rmc-tabs-horizontal rmc-tabs-top"
>
  <div
    class="rmc-tabs-tab-bar-wrap"
  >
    <div
      class="rmc-tabs-tab-bar rmc-tabs-tab-bar-animated rmc-tabs-tab-bar-top"
      style="background-color:#fff;"
    >
      <div
        class="rmc-tabs-tab-bar-content"
        role="tablist"
        style="touch-action:pan-y;"
      >
        <div
          aria-selected="true"
          class="rmc-tabs-tab-bar-tab rmc-tabs-tab-bar-tab-active"
          id="m-tabs-8-0"
          role="tab"
          style="width:20%;"
        >
          t1
        </div>
        <div
          aria-selected="false"
          class="rmc-tabs-tab-bar-tab"
          id="m-tabs-8-1"
          role="tab"
          style="width:20%;"
        >
          t2
        </div>
        <div
          aria-selected="false"
          class="rmc-tabs-tab-bar-tab"
          id="m-tabs-8-2"
          role="tab"
          style="width:20%;"
        >
          t3
        </div>
        <div
          aria-selected="false"
          class="rmc-tabs-tab-bar-tab"
          id="m-tabs-8-3"
          role="tab"
          style="width:20%;"
        >
          t4
        </div>
        <div
          aria-selected="false"
          class="rmc-tabs-tab-bar-tab"
          id="m-tabs-8-4"
          role="tab"
          style="width:20%;"
        >
          t5
        </div>
        <div
          class="rmc-tabs-tab-bar-underline"
          style="width:20%;left:0%;"
        />
      </div>
    </div>
  </div>
  <div
    class="rmc-tabs-content-wrap rmc-tabs-content-wrap-animated"
    style="touch-action:pan-x pan-y;transform:translate3d(0%, 0px, 1px);-webkit-transform:translate3d(0%, 0px, 1px);-moz-transform:translate3d(0%, 0px, 1px);"
  >
    <div
      aria-hidden="false"
      aria-labelledby="m-tabs-8-0"
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-active"
      role="tabpanel"
    >
      <div>
        <p>
          single content
        </p>
        <p>
          {"index":0,"tab":{"title":"t1"}}
        </p>
      </div>
    </div>
    <div
      aria-hidden="true"
      aria-labelledby="m-tabs-8-1"
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
      role="tabpanel"
    >
      <div>
        <p>
          single content
        </p>
        <p>
          {"index":1,"tab":{"title":"t2"}}
        </p>
      </div>
    </div>
    <div
      aria-hidden="true"
      aria-labelledby="m-tabs-8-2"
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="true"
      aria-labelledby="m-tabs-8-3"
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="true"
      aria-labelledby="m-tabs-8-4"
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
      role="tabpanel"
    />
  </div>
</div>
`;
